[gd_scene load_steps=14 format=4 uid="uid://b4qdfptrurygl"]

[ext_resource type="Script" uid="uid://g8pqkqh6xfnj" path="res://scripts/main_script.gd" id="1_tefeu"]
[ext_resource type="Script" uid="uid://h62lnacmef67" path="res://scripts/object_classes.gd" id="2_6bp64"]
[ext_resource type="Texture2D" uid="uid://d2nvyfnik0rhk" path="res://assets/sprites/room_tileset.png" id="2_o6xl0"]
[ext_resource type="Texture2D" uid="uid://eo78cblja8g0" path="res://assets/sprites/square_shader.png" id="4_85g3d"]
[ext_resource type="Script" uid="uid://h1ty80jyu3kw" path="res://scripts/shadow_tilemap.gd" id="5_choun"]
[ext_resource type="PackedScene" uid="uid://bn6ku55hacl74" path="res://scenes/player.tscn" id="6_ya4ey"]
[ext_resource type="LabelSettings" uid="uid://dov7nku1llp15" path="res://assets/label_settings/task_lebel.tres" id="7_o6xl0"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_iw1gg"]
texture = ExtResource("2_o6xl0")
texture_region_size = Vector2i(20, 20)
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
7:1/0 = 0
8:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
7:5/0 = 0
9:3/0 = 0
9:4/0 = 0
8:5/0 = 0
0:1/0 = 0
1:1/0 = 0
10:1/0 = 0

[sub_resource type="TileSet" id="TileSet_t0ejn"]
tile_size = Vector2i(20, 20)
sources/0 = SubResource("TileSetAtlasSource_iw1gg")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_21xkr"]
texture = ExtResource("2_o6xl0")
texture_region_size = Vector2i(20, 20)
4:7/0 = 0
5:7/0 = 0
1:8/size_in_atlas = Vector2i(2, 1)
1:8/0 = 0
1:8/0/texture_origin = Vector2i(-10, 0)
4:8/0 = 0
5:8/0 = 0
0:9/size_in_atlas = Vector2i(1, 2)
0:9/0 = 0
0:9/0/texture_origin = Vector2i(0, -10)
1:9/size_in_atlas = Vector2i(1, 2)
1:9/0 = 0
1:9/0/texture_origin = Vector2i(0, -10)
2:9/size_in_atlas = Vector2i(2, 1)
2:9/0 = 0
2:9/0/texture_origin = Vector2i(-10, 0)
4:9/0 = 0
5:9/0 = 0
2:10/size_in_atlas = Vector2i(2, 1)
2:10/0 = 0
2:10/0/texture_origin = Vector2i(-10, 0)
4:10/0 = 0
5:10/0 = 0
1:7/size_in_atlas = Vector2i(2, 1)
1:7/0 = 0
1:7/0/texture_origin = Vector2i(10, 0)
0:12/size_in_atlas = Vector2i(1, 2)
0:12/0 = 0
0:12/0/texture_origin = Vector2i(0, 10)
1:12/size_in_atlas = Vector2i(2, 2)
1:12/0 = 0
1:12/0/texture_origin = Vector2i(-10, -10)
3:12/size_in_atlas = Vector2i(1, 2)
3:12/0 = 0
3:12/0/texture_origin = Vector2i(0, 10)
4:12/size_in_atlas = Vector2i(1, 2)
4:12/0 = 0
4:12/0/texture_origin = Vector2i(0, 10)
5:12/size_in_atlas = Vector2i(1, 2)
5:12/0 = 0
5:12/0/texture_origin = Vector2i(0, 10)
3:7/size_in_atlas = Vector2i(1, 2)
3:7/0 = 0
3:7/0/texture_origin = Vector2i(0, -10)
0:7/size_in_atlas = Vector2i(1, 2)
0:7/0 = 0
0:7/0/texture_origin = Vector2i(0, 10)
6:7/size_in_atlas = Vector2i(1, 2)
6:7/0 = 0
6:7/0/texture_origin = Vector2i(0, 10)
0:15/size_in_atlas = Vector2i(2, 3)
0:15/0 = 0
0:15/0/texture_origin = Vector2i(-10, 0)
2:15/size_in_atlas = Vector2i(2, 2)
2:15/0 = 0
2:15/0/texture_origin = Vector2i(-10, -10)
2:17/size_in_atlas = Vector2i(2, 2)
2:17/0 = 0
2:17/0/texture_origin = Vector2i(-10, -10)
4:15/size_in_atlas = Vector2i(2, 3)
4:15/0 = 0
4:15/0/texture_origin = Vector2i(-10, 0)
6:15/size_in_atlas = Vector2i(1, 2)
6:15/0 = 0
6:15/0/texture_origin = Vector2i(0, 10)
7:7/size_in_atlas = Vector2i(1, 2)
7:7/0 = 0
7:7/0/texture_origin = Vector2i(0, -10)
8:7/size_in_atlas = Vector2i(1, 2)
8:7/0 = 0
8:7/0/texture_origin = Vector2i(0, -10)
9:7/size_in_atlas = Vector2i(2, 1)
9:7/0 = 0
9:7/0/texture_origin = Vector2i(-10, 0)
9:8/size_in_atlas = Vector2i(2, 1)
9:8/0 = 0
9:8/0/texture_origin = Vector2i(-10, 0)

[sub_resource type="TileSet" id="TileSet_6bp64"]
tile_size = Vector2i(20, 20)
sources/0 = SubResource("TileSetAtlasSource_21xkr")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qgukd"]
texture = ExtResource("4_85g3d")
texture_region_size = Vector2i(20, 20)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/6 = 6
0:0/6/modulate = Color(0, 0, 0, 1)
0:0/5 = 5
0:0/5/modulate = Color(0, 0, 0, 0.784314)
0:0/4 = 4
0:0/4/modulate = Color(0, 0, 0, 0.588235)
0:0/3 = 3
0:0/3/modulate = Color(0, 0, 0, 0.392157)
0:0/2 = 2
0:0/2/modulate = Color(0, 0, 0, 0.196078)
0:0/1 = 1
0:0/1/modulate = Color(0, 0, 0, 0)

[sub_resource type="TileSet" id="TileSet_m61vi"]
tile_size = Vector2i(20, 20)
sources/0 = SubResource("TileSetAtlasSource_qgukd")

[node name="Main" type="Node2D"]
script = ExtResource("1_tefeu")

[node name="ObjectClasses" type="Node" parent="."]
script = ExtResource("2_6bp64")

[node name="TileSets" type="Node2D" parent="."]

[node name="RoomTileMap" type="TileMapLayer" parent="TileSets"]
use_parent_material = true
tile_map_data = PackedByteArray("AAABAAAAAAABAAEAAAACAAAAAAACAAEAAAADAAAAAAABAAEAAAAEAAAAAAABAAEAAAAFAAAAAAADAAEAAAAGAAAAAAABAAEAAAABAAEAAAABAAIAAAACAAEAAAACAAIAAAADAAEAAAACAAIAAAAEAAEAAAACAAIAAAAFAAEAAAACAAIAAAABAAIAAAABAAMAAAACAAIAAAACAAMAAAADAAIAAAACAAMAAAAEAAIAAAACAAMAAAAFAAIAAAACAAMAAAABAAMAAAABAAMAAAACAAMAAAACAAMAAAADAAMAAAACAAMAAAAEAAMAAAACAAMAAAAFAAMAAAACAAMAAAAGAAEAAAACAAIAAAAGAAIAAAACAAMAAAAGAAMAAAACAAMAAAAAAAEAAAAAAAIAAAAAAAIAAAAAAAIAAAAAAAMAAAAAAAQAAAAAAAQAAAAAAAIAAAAGAAQAAAACAAMAAAAFAAQAAAACAAMAAAAEAAQAAAACAAMAAAADAAQAAAACAAMAAAACAAQAAAACAAMAAAABAAQAAAABAAMAAAAHAAAAAAACAAEAAAAIAAAAAAABAAEAAAAJAAAAAAABAAEAAAAKAAAAAAAEAAEAAAAKAAEAAAAEAAIAAAAKAAIAAAAEAAQAAAAKAAMAAAAEAAIAAAAKAAQAAAAEAAMAAAAKAAUAAAAEAAIAAAAKAAYAAAAEAAIAAAAKAAcAAAAEAAIAAAAKAAgAAAAEAAUAAAAJAAgAAAABAAUAAAAIAAgAAAACAAUAAAAHAAgAAAADAAUAAAAGAAgAAAABAAUAAAAFAAgAAAABAAUAAAAEAAgAAAACAAUAAAADAAgAAAABAAUAAAACAAgAAAABAAUAAAABAAgAAAABAAUAAAAAAAgAAAAAAAUAAAAAAAcAAAAAAAIAAAAAAAYAAAAAAAMAAAAAAAUAAAAAAAIAAAABAAUAAAABAAMAAAABAAYAAAABAAMAAAAHAAIAAAACAAMAAAAIAAIAAAACAAMAAAAIAAMAAAACAAMAAAAHAAMAAAACAAMAAAAHAAQAAAACAAMAAAAIAAQAAAACAAMAAAAIAAUAAAACAAMAAAAHAAUAAAACAAMAAAAGAAUAAAACAAMAAAACAAUAAAACAAMAAAACAAYAAAACAAMAAAADAAYAAAACAAMAAAAEAAYAAAACAAMAAAAFAAYAAAACAAMAAAAGAAYAAAACAAMAAAAHAAYAAAACAAMAAAAIAAYAAAACAAMAAAAFAAUAAAACAAMAAAAEAAUAAAACAAMAAAADAAUAAAACAAMAAAABAAcAAAABAAQAAAACAAcAAAACAAQAAAADAAcAAAACAAQAAAAEAAcAAAACAAQAAAAFAAcAAAACAAQAAAAGAAcAAAACAAQAAAAHAAcAAAACAAQAAAAIAAcAAAACAAQAAAAJAAcAAAADAAQAAAAJAAYAAAADAAMAAAAJAAUAAAADAAMAAAAJAAQAAAADAAMAAAAJAAMAAAADAAMAAAAJAAIAAAADAAMAAAAJAAEAAAADAAIAAAAIAAEAAAACAAIAAAAHAAEAAAACAAIAAAAMAAMAAAAAAAQAAAAMAAQAAAAAAAIAAAAMAAUAAAAAAAMAAAAMAAYAAAAAAAUAAAANAAIAAAABAAEAAAANAAMAAAABAAIAAAANAAQAAAABAAMAAAANAAUAAAABAAQAAAANAAYAAAABAAUAAAAOAAIAAAACAAEAAAAOAAMAAAACAAIAAAAOAAQAAAACAAMAAAAOAAUAAAACAAQAAAAOAAYAAAABAAUAAAAPAAIAAAABAAEAAAAPAAMAAAACAAIAAAAPAAQAAAACAAMAAAAPAAUAAAACAAQAAAAPAAYAAAADAAUAAAAQAAIAAAABAAEAAAAQAAMAAAACAAIAAAAQAAQAAAACAAMAAAAQAAUAAAACAAQAAAAQAAYAAAABAAUAAAARAAIAAAACAAEAAAARAAMAAAACAAIAAAARAAQAAAACAAMAAAARAAUAAAACAAQAAAARAAYAAAABAAUAAAASAAIAAAABAAEAAAASAAMAAAACAAIAAAASAAQAAAACAAMAAAASAAUAAAACAAQAAAASAAYAAAABAAUAAAATAAIAAAADAAEAAAATAAMAAAACAAIAAAATAAQAAAACAAMAAAATAAUAAAACAAQAAAATAAYAAAABAAUAAAAUAAIAAAABAAEAAAAUAAMAAAACAAIAAAAUAAQAAAACAAMAAAAUAAUAAAACAAQAAAAUAAYAAAABAAUAAAAVAAIAAAABAAEAAAAVAAMAAAADAAIAAAAVAAQAAAADAAMAAAAVAAUAAAADAAQAAAAVAAYAAAABAAUAAAAWAAIAAAAEAAEAAAAWAAMAAAAEAAMAAAAWAAQAAAAEAAIAAAAWAAUAAAAEAAQAAAAWAAYAAAAEAAUAAAAAAAoAAAAAAAEAAAAAAAsAAAAAAAIAAAAAAAwAAAAAAAMAAAAAAA0AAAAAAAIAAAAAAA4AAAAAAAQAAAAAAA8AAAAAAAIAAAAAABAAAAAAAAMAAAAAABEAAAAAAAIAAAAAABIAAAAAAAUAAAABAAoAAAABAAEAAAABAAsAAAABAAIAAAABAAwAAAABAAMAAAABAA0AAAABAAMAAAABAA4AAAABAAMAAAABAA8AAAABAAMAAAABABAAAAABAAMAAAABABEAAAABAAQAAAABABIAAAABAAUAAAACAAoAAAADAAEAAAACAAsAAAACAAIAAAACAAwAAAACAAMAAAACAA0AAAACAAMAAAACAA4AAAACAAMAAAACAA8AAAACAAMAAAACABAAAAACAAMAAAACABEAAAACAAQAAAACABIAAAADAAUAAAADAAoAAAABAAEAAAADAAsAAAACAAIAAAADAAwAAAACAAMAAAADAA0AAAACAAMAAAADAA4AAAACAAMAAAADAA8AAAACAAMAAAADABAAAAACAAMAAAADABEAAAACAAQAAAADABIAAAABAAUAAAAEAAoAAAACAAEAAAAEAAsAAAACAAIAAAAEAAwAAAACAAMAAAAEAA0AAAACAAMAAAAEAA4AAAACAAMAAAAEAA8AAAACAAMAAAAEABAAAAACAAMAAAAEABEAAAACAAQAAAAEABIAAAACAAUAAAAFAAsAAAADAAIAAAAFAAwAAAADAAMAAAAFAA0AAAADAAMAAAAFAA4AAAADAAMAAAAFAA8AAAACAAMAAAAFABAAAAACAAMAAAAFABEAAAACAAQAAAAFABIAAAABAAUAAAAGAAoAAAAEAAEAAAAGAAsAAAAEAAIAAAAGAAwAAAAEAAIAAAAGAA0AAAAEAAIAAAAGAA4AAAABAAEAAAAGAA8AAAACAAIAAAAGABAAAAACAAMAAAAGABEAAAACAAQAAAAGABIAAAABAAUAAAAHAA4AAAABAAEAAAAHAA8AAAACAAIAAAAHABAAAAACAAMAAAAHABEAAAACAAQAAAAHABIAAAABAAUAAAAIAA4AAAACAAEAAAAIAA8AAAACAAIAAAAIABAAAAACAAMAAAAIABEAAAACAAQAAAAIABIAAAACAAUAAAAJAA4AAAABAAEAAAAJAA8AAAADAAIAAAAJABAAAAADAAMAAAAJABEAAAADAAQAAAAJABIAAAABAAUAAAAKAA4AAAAEAAEAAAAKAA8AAAAEAAIAAAAKABAAAAAEAAQAAAAKABEAAAAEAAIAAAAKABIAAAAEAAUAAAAPAAoAAAABAAEAAAAPAAsAAAACAAIAAAAPAAwAAAACAAMAAAAPAA0AAAACAAMAAAAPAA4AAAACAAMAAAAPAA8AAAABAAMAAAAPABAAAAABAAMAAAAPABEAAAABAAQAAAAPABIAAAABAAUAAAAQAAoAAAABAAEAAAAQAAsAAAACAAIAAAAQAAwAAAACAAMAAAAQAA0AAAACAAMAAAAQAA4AAAACAAMAAAAQAA8AAAACAAMAAAAQABAAAAACAAMAAAAQABEAAAACAAQAAAAQABIAAAACAAUAAAARAAoAAAACAAEAAAARAAsAAAACAAIAAAARAAwAAAACAAMAAAARAA0AAAACAAMAAAARAA4AAAACAAMAAAARAA8AAAACAAMAAAARABAAAAACAAMAAAARABEAAAACAAQAAAARABIAAAABAAUAAAASAAoAAAABAAEAAAASAAsAAAACAAIAAAASAAwAAAACAAMAAAASAA0AAAACAAMAAAASAA4AAAACAAMAAAASAA8AAAACAAMAAAASABAAAAACAAMAAAASABEAAAACAAQAAAASABIAAAADAAUAAAATAAoAAAABAAEAAAATAAsAAAACAAIAAAATAAwAAAACAAMAAAATAA0AAAACAAMAAAATAA4AAAACAAMAAAAUAAoAAAADAAEAAAAUAAsAAAACAAIAAAAUAAwAAAACAAMAAAAUAA0AAAACAAMAAAAUAA4AAAACAAQAAAAVAAoAAAABAAEAAAAVAAsAAAADAAIAAAAVAAwAAAADAAMAAAAVAA0AAAADAAMAAAAVAA4AAAADAAQAAAAWAAoAAAAEAAEAAAAWAAsAAAAEAAIAAAAWAAwAAAAEAAMAAAAWAA0AAAAEAAIAAAAWAA4AAAAEAAIAAAAMAAIAAAAAAAEAAAAFAAoAAAABAAEAAAAOAAsAAAACAAIAAAANAAsAAAABAAIAAAANAAwAAAABAAMAAAAOAAwAAAACAAMAAAAOAA0AAAACAAMAAAANAA0AAAABAAMAAAANAA4AAAABAAQAAAAOAA4AAAACAAQAAAATABEAAAADAAQAAAATABAAAAADAAMAAAATAA8AAAADAAMAAAATABIAAAABAAUAAAAUABIAAAAEAAUAAAAOABIAAAAAAAUAAAAOABEAAAAAAAIAAAAOABAAAAAAAAIAAAAUABEAAAAEAAIAAAAUABAAAAAEAAQAAAAVAA8AAAABAAUAAAAWAA8AAAAEAAUAAAANAA8AAAABAAUAAAAMAA4AAAAAAAIAAAAMAA8AAAAAAAUAAAAMAA0AAAAAAAMAAAAMAAwAAAAAAAQAAAAMAAsAAAAAAAIAAAAMAAoAAAAAAAEAAAANAAoAAAABAAEAAAAOAAoAAAACAAEAAAAOAA8AAAALAAEAAAAUAA8AAAAKAAEAAAAAAAAAAAAAAAEAAAA=")
tile_set = SubResource("TileSet_t0ejn")

[node name="ObjectsTileMap" type="TileMapLayer" parent="TileSets"]
tile_map_data = PackedByteArray("AAACAAEAAAAFAAcAAAADAAEAAAAEAAcAAAAJAAcAAAAGAAcAAAABAAYAAAAFAAkAAAAJAAUAAAABAAgAAAAJAAYAAAABAAgAAAAEAAEAAAAGAAcAAAABAAEAAAAAAAcAAAAVAAMAAAAGAAcAAAANAAUAAAAFAAoAAAAUAAMAAAAFAAoAAAAQAAMAAAAAAAcAAAANAAQAAAAEAAgAAAAVAAsAAAAFAAoAAAAPABAAAAAAAAkAAAAPAAsAAAAAAAcAAAAQAAsAAAAAAAcAAAATABEAAAAFAAoAAAAVAA4AAAAGAAcAAAAQABEAAAAFAAkAAAAVAA0AAAAEAAkAAAAJAA8AAAAFAAoAAAABAAsAAAAGAAcAAAAFAAsAAAAFAAoAAAAFAAwAAAAEAAkAAAAHAA8AAAACAAkAAAAHABAAAAAFAAkAAAABABEAAAAFAAoAAAAFABEAAAADAAcAAAAGABEAAAADAAcAAAAHABEAAAADAAcAAAAGAA8AAAAGAAcAAAABAAcAAAACAAoAAAABAA8AAAAHAAcAAAANAAsAAAAJAAcAAAANAA4AAAAGAAcAAAATAAUAAAAJAAgAAAASAAUAAAAGAAcAAAAIAAcAAAAFAAoAAAAPAAMAAAAAAAcAAAAEAAYAAAAEAA8AAAAEAAQAAAAGAA8AAAARAAsAAAAFAAgAAAAIAAEAAAAEAAwAAAAJAAEAAAAFAAwAAAAHAAEAAAADAAwAAAAGAAEAAAAAAAwAAAAHAAMAAAABAAwAAAAGAAMAAAAEAAgAAAAGAAQAAAAEAAgAAAAJAAQAAAAEAAkAAAAJAAMAAAAEAAkAAAA=")
tile_set = SubResource("TileSet_6bp64")

[node name="ShadowTileMap" type="TileMapLayer" parent="TileSets"]
tile_set = SubResource("TileSet_m61vi")
script = ExtResource("5_choun")

[node name="Player" parent="." instance=ExtResource("6_ya4ey")]
position = Vector2(-32, 0)

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(110, 90)

[node name="UI" type="CanvasLayer" parent="."]

[node name="TaskPanel" type="Panel" parent="UI"]
offset_left = -100.0
offset_right = 427.0
offset_bottom = 513.0
scale = Vector2(0.15, 0.15)

[node name="Heading" type="Label" parent="UI/TaskPanel"]
layout_mode = 2
offset_left = 7.0
offset_right = 527.0
offset_bottom = 56.0
label_settings = ExtResource("7_o6xl0")

[node name="List" type="VBoxContainer" parent="UI/TaskPanel"]
layout_mode = 2
offset_left = 7.0
offset_top = 53.0
offset_right = 527.0
offset_bottom = 513.0

[node name="AutoToggle" type="Timer" parent="UI"]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="UI/AutoToggle" to="." method="_on_auto_toggle_timeout"]
